# brig

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  brig.hwprj  make_b32.bat  make_linux.sh  make_mingw.bat  make_vc.bat  makefile.bc  makefile.gcc  makefile.gtk  makefile.vc
include/: brig.h  brig_app.h  brig_base.h  brig_defs.h  brig_funcs.h  brig_style.h  brig_widgets.h  brig_xml.h
source/common/: brig_app.cpp  brig_base.cpp  brig_funcs.cpp  brig_menu.cpp  brig_style.cpp  brig_table.cpp  brig_widgets.cpp  brig_xml.cpp
source/gtk/: commond.cpp  control.cpp  draw.cpp  menu.cpp  message.cpp  misc.cpp  table.cpp  tree.cpp  window.cpp
source/winapi/: commond.cpp  control.cpp  draw.cpp  menu.cpp  message.cpp  misc.cpp  strings.cpp  table.cpp  window.cpp
tests/: bld_bcc.bat  bld_bcc_uni.bat  bld_mingw.bat  bld_mingw_uni.bat  bld_vc.bat  bld_vc_uni.bat  build.sh  cletocl.h  curl4servis.cpp  leto_manager.cpp  test1.cpp  test2.cpp  test_tab.cpp  test_table.cpp  test_tree.cpp  test_tree.xml
tests/winapi/: bld_bcc.bat  bld_bcc_uni.bat  bld_mingw_uni.bat  hwgui_xp.rc  test1.cpp  test2.cpp
